--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <header class="header bg-primary">
     Santander Global Tech (SGT)
+    <div><a class="btn btn-link text-white" href="https://github.com/luis-teixeira/ui-test-sgt" target="_blank">source code</a></div>
 </header>
